@@ -4,7 +4,7 @@
  * (c) Copyright 2002 Rasmus Hansen (GK@panet)
  * Distributed under the GNU Public License
  *
- * $Id: ADMINCMDSCommand.cc,v 1.24 2004-11-20 20:44:46 jeekay Exp $
+ * $Id: ADMINCMDSCommand.cc,v 1.25 2004-11-20 23:11:00 jeekay Exp $
  */
 
 #include	<string>
@@ -75,9 +75,9 @@ if(aLevel >= 800)
 	bot->Notice(theClient, "OFFICIAL (CHECK <user>) (CLEAR <user>) (LIST) (SET <user> <level>");
 	bot->Notice(theClient, "SUSPEND * (nick) (duration) (reason)");
 	bot->Notice(theClient, "UNSUSPEND * (nick) (reason)");
+	bot->Notice(theClient, "SET (chan) NOPART (on/off)");
 	bot->Notice(theClient, "SET (chan) NOPURGE (on/off)");
 	bot->Notice(theClient, "SET (chan) PARTNER (on/off)");
-	bot->Notice(theClient, "SET (chan) SPECIAL (on/off)");
 	bot->Notice(theClient, "\002");
 
 	}
